[package]
name = "pkgdu"
version = "0.9.0"

authors = ["Bhanupong Petchlert <bpetlert@gmail.com>"]

description = "A tool to display packages disk usage size"
documentation = "https://github.com/bpetlert/pkgdu"
homepage = "https://github.com/bpetlert/pkgdu"
license = "GPL-3.0-or-later"
readme = "README.adoc"
repository = "https://github.com/bpetlert/pkgdu"

edition = "2021"
publish = false

[dependencies]
alpm = "~4"
anyhow = "~1"
clap = { version = "~4.5", features = ["derive"] }
globset = "~0.4"
humansize = "~2.1"
once_cell = "~1.20"
pacmanconf = "~3"
regex = "~1.10"
tabled = "~0.16"
tracing = { version = "~0.1", features = [
    "max_level_debug",
    "release_max_level_debug",
] }
tracing-subscriber = { version = "~0.3", default-features = false, features = [
    "ansi",
    "env-filter",
    "fmt",
] }

[dev-dependencies]
duct = "~0.13"
pretty_assertions = "~1.4"
